# 3DEngine

./: .gitignore  3Dengine  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/cubes/: CMakeLists.txt  main.cpp
examples/objLoader/: .gitignore  CMakeLists.txt  main.cpp
examples/objLoader/assets/: axis.mtl  teapot.mtl  testCube.mtl
include/: CMakeLists.txt
include/math/: matrix4.hpp  vector3.hpp
include/scene/: scene.hpp
include/shapes/: cube.hpp  objloader.hpp  shape.hpp  triangle.hpp
src/: CMakeLists.txt  main.cpp
src/math/: matrix3.cpp  matrix3.hpp  matrix4.cpp  matrix4.hpp  vector3.cpp  vector3.h  vector3.hpp
src/scene/: scene.cpp  scene.hpp
src/shapes/: cube.cpp  cube.h  cube.hpp  objloader.cpp  shape.cpp  shape.h  shape.hpp  triangle.cpp  triangle.hpp
